# nan-medium-material

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataset/cybersecurity-report/: README.md
self-corrective-rag-smoldocling/: evaluation.xlsx  main.ipynb  output.md  requirements.txt
smoldocling-rag/: main.ipynb
